cabal-version:       3.0
name:                by-other-names
version:             1.0.2.0
synopsis:            Give aliases to record fields.

description:         Give aliases to record fields.

license:             BSD-3-Clause
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz_carrete@yahoo.com
category:            Data
extra-source-files:  CHANGELOG.md,
                     README.md
build-type:          Simple

source-repository head
    type: git
    location: https://github.com/danidiaz/by-other-names.git

library
  exposed-modules:     ByOtherNames
  build-depends:       base                 >= 4.10.0.0 && < 5
  hs-source-dirs:      lib
  ghc-options: -W
  default-language:    Haskell2010

library aeson-adapter
  exposed-modules:     ByOtherNames.Aeson
  build-depends:       base                 >= 4.10.0.0 && < 5,
                       aeson                >= 1.5.2.0,
                       text                 >= 1.2.3.0,
                       by-other-names
  hs-source-dirs:      lib-aeson
  -- https://downloads.haskell.org/ghc/latest/docs/html/users_guide/using-warnings.html
  ghc-options: -W
  visibility:          public
  default-language:    Haskell2010

library th
  exposed-modules:     ByOtherNames.TH
  build-depends:       base                 >= 4.10.0.0,
                       template-haskell     >= 2.16.0.0,
                       by-other-names
  hs-source-dirs:      lib-th
  -- https://downloads.haskell.org/ghc/latest/docs/html/users_guide/using-warnings.html
  ghc-options: -W
  visibility:          public
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tests.hs
  build-depends:
                       base                 >= 4.10.0.0 && < 5,
                       tasty                >= 0.10.1.1,
                       tasty-hunit          >= 0.9.2,
                       aeson                >= 1.5.2.0,
                       by-other-names,
                       by-other-names:th,
                       aeson-adapter,
  default-language:    Haskell2010
